wiremock/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiremock
  labels:
    app: wiremock
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: wiremock
