wiremock/service-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiremock-loadbalancer
  labels:
    app: wiremock
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: wiremock
  externalTrafficPolicy: Local
