wiremock/istio-virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wiremock
spec:
  hosts:
  - "*"
  gateways:
  - my-ingress-istio-gateway
  http:
  - route:
    - destination:
        host: wiremock
        port:
          number: 8080
